--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 0 auto;
 }
 
 .App-logo {
